--- a/layout_parts/q1/answer/index.html
+++ b/layout_parts/q1/answer/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <h1 class="title">基本レイアウト・パーツ</h1>
+      <h1 class="title">応用レイアウト・パーツ</h1>
       <h2 class="headline">
         <p class="headline__text">Q1. ボックスモデル</p>
       </h2>
